# Talker

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/Core/Base/: base_navigation.py
src/Features/Landing/: landing_navigation.py  landing_routes.py
src/Features/Landing/Domain/Models/: project.py
src/Infrastructure/: nav_host.py
src/core/: config.py
src/core/data/entities/: __init__.py  entity_base.py  recent_project.py
src/core/models/: __init__.py  recent_project.py  result.py
src/core/repository_contracts/: __init__.py  i_recent_project_repository.py
src/features/landing/: landing_routes.py
src/features/landing/domain/use_cases/: add_recent_project_use_case.py
src/features/prompting/: prompting_routes.py
src/features/prompting/domain/enums/: file_system_item_type.py
src/features/prompting/domain/models/: file_system_item.py  file_system_item_for_prompt.py  item_in_sorted_list.py
src/features/prompting/domain/services/: project_structure_service.py  (+1 more)
src/infrastructure/: app_di_container.py  nav_host.py
src/infrastructure/database/: db_core.py
src/infrastructure/repositories/: __init__.py  recent_project_repository.py
src/shared/global_styles/: app_theme.py
tests/features_tests/landing_tests/domain_tests/: test_add_recent_project_use_case.py
tests/features_tests/landing_tests/screens_tests/: test_project_pick_view_model.py
tests/features_tests/prompting_tests/screen_components_tests/: test_prompting_text_field.py
tests/infrastructure_tests/: test_recent_project_repository.py
(+22 files in other folders)
